@@ -58,6 +58,7 @@ sys/time.h \
 signal.h \
 unix.h \
 stdlib.h \
+cpuid.h \
 dlfcn.h)
 
 AC_TYPE_SIZE_T
